--- a/APPLICATION/frontend/pom.xml
+++ b/APPLICATION/frontend/pom.xml
@@ -103,6 +103,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- ✅ MySQL Connector (ensures JDBC driver is available in runtime JAR) -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.32</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
@@ -121,7 +129,7 @@
     <build>
         <plugins>
 
-            <!-- Spring Boot Maven Plugin -->
+            <!-- ✅ Ensure fat JAR includes MySQL driver -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -132,6 +140,8 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <!-- ✅ Added to ensure dependencies are fully packaged -->
+                    <layers enabled="false" />
                 </configuration>
             </plugin>
 
@@ -172,6 +182,7 @@
     </distributionManagement>
 
 </project>
+
 
 
 
