--- a/APPLICATION/frontend/src/main/resources/application.properties
+++ b/APPLICATION/frontend/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+
+# ✅ Prevent Spring Security from trying to auto-create default JDBC tables
+spring.security.jdbc.initialize-schema=never
+spring.datasource.initialize=false
+spring.sql.init.mode=never
