--- a/Terraform/EKS/kubernetes_files/PodScaler.yaml
+++ b/Terraform/EKS/kubernetes_files/PodScaler.yaml
@@ -2,54 +2,37 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
   name: java-app-scaledobject
-  labels:
-    app: java-app
+  namespace: default
 spec:
   scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
     name: java-app-deployment
+
   minReplicaCount: 2
   maxReplicaCount: 30
-  cooldownPeriod: 60
-  pollingInterval: 30
-  advanced:
-    horizontalPodAutoscalerConfig:
-      behavior:
-        scaleUp:
-          stabilizationWindowSeconds: 0
-          policies:
-          - type: Percent
-            value: 200
-            periodSeconds: 15
-        scaleDown:
-          stabilizationWindowSeconds: 300
-          policies:
-          - type: Percent
-            value: 50
-            periodSeconds: 60
-    restoreToOriginalReplicaCount: true
+
   triggers:
-    # ---- CPU scaling ----
+    # --- FIXED CPU TRIGGER ---
     - type: cpu
       metadata:
-        type: Utilization
-        value: "70"
+        metricType: Utilization     # ✅ replaces deprecated "type" field
+        value: "70"                 # desired CPU utilization %
 
-    # ---- Prometheus Request Rate (RPS) scaling ----
+    # --- PROMETHEUS TRIGGER 1 ---
     - type: prometheus
       metadata:
         serverAddress: http://prometheus-server.monitoring.svc.cluster.local:9090
-        metricName: http_requests_per_second
+        metricName: requests_per_second
+        query: sum(rate(http_server_requests_seconds_count{app="java-app"}[1m]))
         threshold: "100"
-        query: |
-          sum(rate(http_server_requests_seconds_count{app="java-app"}[1m]))
 
-    # ---- Prometheus Latency (P95) scaling ----
+    # --- PROMETHEUS TRIGGER 2 ---
     - type: prometheus
       metadata:
         serverAddress: http://prometheus-server.monitoring.svc.cluster.local:9090
         metricName: http_latency_p95
+        query: histogram_quantile(0.95, sum(rate(http_server_requests_seconds_bucket{app="java-app"}[5m])) by (le))
         threshold: "0.5"
-        query: |
-          histogram_quantile(0.95, sum(rate(http_server_requests_seconds_bucket{app="java-app"}[5m])) by (le))
 
 
